Fix value of YEAR field when set from a non-numeric string. (Bug #6067)